Migration: Fix HTML rewrite for certificates without resource file - refs #5074

--- a/public/main/gradebook/certificate_template/template.html
+++ b/public/main/gradebook/certificate_template/template.html
@@ -10,23 +10,23 @@
     </head>
     <body style="background-color: #fff;">
         <div style="width: 1072px;margin-left: auto;margin-right: auto;">
-            <div style="background: url('{REL_CODE_PATH}img/paper.png') repeat;padding: 10px;">
+            <div style="background: url('{IMG_PATH}paper.png') repeat;padding: 10px;">
                 <table cellpadding="0" cellspacing="0">
                     <tr>
                         <td>
                             <table cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td>
-                                        <img src="{REL_CODE_PATH}img/side-bar.png" alt="Side bar">
+                                        <img src="{IMG_PATH}side-bar.png" alt="Side bar">
                                     </td>
                                     <td>
-                                        <img src="{REL_CODE_PATH}img/side-top-a.png" alt="Side top element a">
+                                        <img src="{IMG_PATH}side-top-a.png" alt="Side top element a">
                                     </td>
                                     <td>
-                                        <img src="{REL_CODE_PATH}img/certificate-logo.png" alt="Certificate logo">
+                                        <img src="{IMG_PATH}certificate-logo.png" alt="Certificate logo">
                                     </td>
                                     <td>
-                                        <img src="{REL_CODE_PATH}img/side-top-b.png" alt="Side top element b">
+                                        <img src="{IMG_PATH}side-top-b.png" alt="Side top element b">
                                     </td>
                                 </tr>
                             </table>
@@ -36,7 +36,7 @@
                         <td>
                             <table width="100%" cellpadding="0" cellspacing="0">
                                 <tr>
-                                    <td><img src="{REL_CODE_PATH}img/side-bar-button.png" alt="Side bar button"></td>
+                                    <td><img src="{IMG_PATH}side-bar-button.png" alt="Side bar button"></td>
                                     <td>
                                         <table cellpadding="0" cellspacing="0" width="100%">
                                             <tr>
@@ -79,19 +79,19 @@
                                                     <table cellpadding="0" cellspacing="0" align="center">
                                                         <tr>
                                                             <td>
-                                                                <img src="{REL_CODE_PATH}img/signature1.png" alt="Signature 1">
+                                                                <img src="{IMG_PATH}signature1.png" alt="Signature 1">
                                                             </td>
                                                             <td>
-                                                                <img src="{REL_CODE_PATH}img/blank.png" alt="blank">
+                                                                <img src="{IMG_PATH}blank.png" alt="blank">
                                                             </td>
                                                             <td>
-                                                                <img src="{REL_CODE_PATH}img/signature2.png" alt="firm02">
+                                                                <img src="{IMG_PATH}signature2.png" alt="firm02">
                                                             </td>
                                                             <td>
-                                                                <img src="{REL_CODE_PATH}img/certified.png" alt="certified">
+                                                                <img src="{IMG_PATH}certified.png" alt="certified">
                                                             </td>
                                                             <td>
-                                                                <img src="{REL_CODE_PATH}img/blank.png" alt="blank">
+                                                                <img src="{IMG_PATH}blank.png" alt="blank">
                                                             </td>
                                                             <td>
                                                                 ((certificate_barcode))
