Documentation: Update changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -58,7 +58,8 @@
 
     <h3>Added</h3>
     <ul aria-live="off">
-        <li>None</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/74108d056e021c8b63cae773e9f7e1b551ce614d">74108d05</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6738">GH#6738</a>) Admin: #add health check box on admin page</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/611c21af0381c94d5973b9a74518278e99a198d3">611c21af</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6807">GH#6807</a>) Admin: Add icon with setting category and variable in settings page (only in dev server mode)</li>
     </ul>
 
     <h3>Changed</h3>
@@ -68,6 +69,27 @@
 
     <h3>Fixed</h3>
     <ul aria-live="off">
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/8c89a099eab4ebba494818306496feebeef5b344">8c89a099</a>) User: Internals: Fix to remove non-existent relation in the updated structure to avoid errors in user deletion</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/235debc223c8ed05624c9e070de5879938b84b6c">235debc2</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6837">GH#6837</a>) Exercise: Restore export all results feature from 1.11.x</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/ab108f0d6dc40eb3448f3923146dcca6f211f602">ab108f0d</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2805">GH#2805</a>) Catalogue: Fix showing correct registration button for courses</li>
+        <li>[2025-10-29] (<a href="https://github.com/chamilo/chamilo-lms/commit/2ce8b64b4659be55b650bddee25877e5b227f2f9">2ce8b64b</a>) Session: Convert sessions page paginator to array</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/e7e1d53f6e41a4ca43cbc5575d00a95159115f18">e7e1d53f</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6862">GH#6862</a>) Display: Always prevent linking breadcrumb's last element</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/d439bc052894f26173b74935acc4ade74799d5c8">d439bc05</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourse: Fix more issues in sale process</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/4969159415d2616ceb1e059738a400a270e36236">49691594</a>) Internal: Remove public/img/course folder from repository</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/eb6c7282475e22229bcee30adcca946c23a0fd0a">eb6c7282</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses - Fix undefined SYS_COURSE_PATH constant using IllustrationRepository</li>
+        <li>[2025-10-28] (<a href="https://github.com/chamilo/chamilo-lms/commit/ba700d3fc3c15192626e5c19e9c03cccbe3b120b">ba700d3f</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6870">GH#6870</a>) Course: Improve copy/import mzb files</li>
+        <li>[2025-10-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/24a37fc8e7f81fc0db11c661c0c0bd08568937dd">24a37fc8</a>) Internal: Add missing flag api_platform.use_symfony_listeners to true</li>
+        <li>[2025-10-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/99ac0455897727478be737b2e086060b9fee9945">99ac0455</a>) Internal: Remove the deprecated Twig filter/tag spaceless</li>
+        <li>[2025-10-27] (<a href="https://github.com/chamilo/chamilo-lms/commit/e985cdc00608ba43f4369cacd12b7aea427f13b5">e985cdc0</a>) Vendor: Update composer.lock</li>
+        <li>[2025-10-26] (<a href="https://github.com/chamilo/chamilo-lms/commit/0b07e098f9b2de5492595dcde9159a6da9005c79">0b07e098</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6870">GH#6870</a>) Course: Avoid duplicated items with full restore</li>
+        <li>[2025-10-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/0ab8af8ee67507035e59fbcefe85ada70af21cdc">0ab8af8e</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6870">GH#6870</a>) Course: Fix tool intro restore</li>
+        <li>[2025-10-25] (<a href="https://github.com/chamilo/chamilo-lms/commit/05c5c83b155c62d2652ae97d5f5385af31099c1b">05c5c83b</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6870">GH#6870</a>) Course: Improve course import for documents</li>
+        <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/9efbfc81313de38d17ed1aff3c1eba5c7b0075fa">9efbfc81</a>) Display: Remove .thumbs folders and add ignore rule</li>
+        <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/4a936946cd4a5ce2c985e22bed1281140e27f474">4a936946</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/5074">GH#5074</a>) Migration: Fix HTML rewrite for certificates without resource file</li>
+        <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/9451eacbb088039f865e00c7c5f42144f68ea308">9451eacb</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/2615">GH#2615</a>) Plugin: BuyCourses: Update configure_course.php code from 1.11.x branch</li>
+        <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/b305515e0a1d327ee74968beb83356511118cd72">b305515e</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6870">GH#6870</a>) Course: Fix broken course import zip/mzb</li>
+        <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/ee3ca03fb87bed9eed5d90ed1d53d3f1032ea69b">ee3ca03f</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6201">GH#6201</a>) Auth: Fix UserAuthSourceListener to check auth sources for LDAP user</li>
+        <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/c1b659b04aeb40c0374481014977ba5849ab7297">c1b659b0</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/4328">GH#4328</a>) Auth: Filter user access by their access url</li>
         <li>[2025-10-24] (<a href="https://github.com/chamilo/chamilo-lms/commit/d96ae324056c56b0b8752b78951ef74dc7e87134">d96ae324</a>) Internal: Maintenance: Fix GradeBookBackup::show() declaration</li>
         <li>[2025-10-22] (<a href="https://github.com/chamilo/chamilo-lms/commit/4e0f81acca69f24f679a0e75bdf050f0c5dcdab1">4e0f81ac</a> - <a href="https://task.beeznest.com/issues/22957">BT#22957</a>) Internal: API: Adjust serialization groups for CreateUserOnAccessUrlInput and User entity</li>
         <li>[2025-10-21] (<a href="https://github.com/chamilo/chamilo-lms/commit/2551703dcca254d8b7121e7a940cb1208d293113">2551703d</a> - <a href="https://github.com/chamilo/chamilo-lms/issues/6926">GH#6926</a>) Internal: Update titles/comments for show_tabs and show_tabs_per_role</li>
